# forma

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.devcontainer  INSIGHTS.md  LICENSE  Makefile  README.md  RELEASING.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  toolchain.toml  versions.json
.cellar/opvance/.refs/: Versões LOGO Opvance.ai
.cellar/sigil-enterprises/.refs/: [0.2.0] SGL ALEXION aHUS Proposal.docx
.cellar/sigil-enterprises/alexion-ahus-proposal/: content.yaml  forma.yaml
.cellar/sigil-enterprises/nupco-vbhc-proposal/: content.yaml  forma.yaml  report.yaml  slides.yaml
.claude/: README.md
.devcontainer/: .tmux.conf  devcontainer.json  docker-compose.yaml  setup-editor  setup-host
.devcontainer/.devcontainer/: devcontainer.json  docker-compose.yaml  setup-editor  setup-host
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-base.yml  build.yml  docs.yml  notify-sync.yml  publish.yml  release-validate.yml  release.yml
crates/forma-cli/: Cargo.toml
crates/forma-cli/src/: main.rs
crates/forma-cli/tests/: tests.rs
crates/forma-composer/: Cargo.toml
crates/forma-composer/src/: client.rs  filler.rs  lib.rs  prompts.rs
crates/forma-composer/tests/: tests.rs
crates/forma-core/: Cargo.toml
crates/forma-core/src/: base.rs  config.rs  include_loader.rs  lib.rs  loader.rs  validator.rs
crates/forma-core/tests/: tests.rs
crates/forma-render/: Cargo.toml
crates/forma-render/examples/: debug_compare.rs  debug_diff.rs  debug_exact_test.rs  debug_full_render.rs  debug_load.rs  debug_minimal.rs  debug_pipeline.rs  debug_rebuild.rs  debug_resolver.rs  debug_root.rs  debug_rt_variants.rs  debug_slides.rs  debug_t2.rs  debug_t3.rs  debug_test_ctx.rs  roundtrip_test.rs
crates/forma-render/src/: base_renderer.rs  context.rs  engine.rs  filters.rs  html_renderer.rs  lib.rs  manifest.rs
crates/forma-render/tests/: integration_tests.rs  tera_debug.rs
crates/forma-schema/: Cargo.toml
crates/forma-schema/schema/: forma-config.schema.yaml  proposal-content.schema.yaml  report-document.schema.yaml  slide-document.schema.yaml
crates/forma-schema/src/: content.rs  document.rs  embedded.rs  lib.rs
crates/forma-schema/tests/: tests.rs
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/composer/: index.html
dev/api/core/: index.html
dev/api/publisher/: index.html
dev/api/renderer/: index.html
dev/deployment/ci/: index.html
dev/deployment/devcontainer/: index.html
dev/deployment/secrets/: index.html
dev/getting-started/first-document/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guide/composer/: index.html
dev/guide/mapping/: index.html
dev/guide/publishing/: index.html
dev/guide/schemas/: index.html
dev/guide/skills/: index.html
dev/guide/templates/: index.html
dev/search/: search_index.json
docs/: index.md
docs/api/: composer.md  core.md  publisher.md  renderer.md
docs/deployment/: ci.md  devcontainer.md  secrets.md
docs/getting-started/: first-document.md  installation.md  quickstart.md
docs/guide/: composer.md  mapping.md  publishing.md  schemas.md  skills.md  templates.md
documents/example-client/: content.yaml  forma.yaml  style.yaml
schema/: brief.schema.json  case_study.schema.json  proposal.schema.json
src/forma/: __init__.py  _version.py
src/forma/cli/: app.py
src/forma/composer/: client.py  filler.py  prompts.py
src/forma/core/: base.py  config.py  include_loader.py  loader.py  validator.py
src/forma/integrations/: skills_loader.py
src/forma/publisher/: google_drive.py
src/forma/renderer/: base.py  context.py  engine.py  filters.py  html_renderer.py
src/forma/schema/: forma-config.schema.yaml  proposal-content.schema.yaml  report-document.schema.yaml  slide-document.schema.yaml
templates/case-study/: main.tex.j2  manifest.yaml
templates/proposal-brief/: manifest.yaml
templates/proposal-report/: main.tex.j2  manifest.yaml
templates/proposal-slides/: main.tex.j2
templates/proposal-slides/_partials/: _context.tex.j2  _cover.tex.j2  _exec_summary.tex.j2  _solution.tex.j2  _team.tex.j2  _timeline.tex.j2
tests/: conftest.py  test_cli.py  test_composer.py  test_e2e.py  test_include_loader.py  test_publisher.py  test_renderer.py  test_schema.py  test_skills.py
tests/fixtures/example-client/: content.yaml  forma.yaml  report.yaml  slides.yaml  style.yaml
tests/fixtures/templates/: style.yaml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.1.0/api/composer/: index.html
v1.1.0/api/core/: index.html
v1.1.0/api/publisher/: index.html
v1.1.0/search/: search_index.json
v1.1.0/stylesheets/: extra.css
v1.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.2.0/search/: search_index.json
(+104 files in other folders)
