[package]
name = "forma-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
forma-schema = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1.20"

[dev-dependencies]
tempfile = { workspace = true }
